💄 Fix spacing variables on navbar

--- a/assets/sass/components/_navbar.sass
+++ b/assets/sass/components/_navbar.sass
@@ -20,7 +20,7 @@
 
 .navbar-content
   margin: 0 auto
-  padding: $space-24 0
+  padding: $space-x 0
   max-width: $bkp-desktop-hd
 
   display: flex
@@ -39,7 +39,7 @@
       align-items: center
 
     &-me
-      margin-left: $space-16
+      margin-left: $space-xs
 
     &-logo
       height: 48px
@@ -59,7 +59,7 @@
 
   .links
     display: none
-    margin-top: $space-8
+    margin-top: $space-xxxs
 
     +adapt($bkp-tablet)
       display: block
@@ -69,8 +69,8 @@
 
     a
       position: relative
-      padding-left: $space-24
-      padding-right: $space-24
+      padding-left: $space-x
+      padding-right: $space-x
 
       color: $oblivion-025
 
